# amsthm-to-anki

./: .gitignore  .travis.yml  README.md  amsthm-to-anki.cabal  default.nix  shell.nix  stack.yaml  stylize.sh
app/: Main.hs
src/: Extract.hs  Types.hs
src/Extract/: DefinitionsTheoremsLemmas.hs  Equations.hs  Notes.hs  Premises.hs  Util.hs
test/: Test.hs
test/Test/: DefinitionsTheoremsLemmas.hs  Equations.hs  Extract.hs  Notes.hs  Premises.hs  Util.hs
test/golden/: 1.golden.tex  1.in.tex  1.out.tex
test/golden/auto/: 1.golden.el
